# monquery

./: .travis.yml  LICENSE  README.md  pyproject.toml
demo/: README.md  app.py  requirements.txt
monquery/: __init__.py  db.py  fltr.py  paginate.py  parse.py  sort.py  util.py
test/: conftest.py  test_db.py  test_filter.py
