[tool.poetry]
name = "monquery"
version = "0.1.0"
description = "A library for HTTP query string to MongoDB queries translation"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"
repository = "https://github.com/monomonedula/monquery"
homepage = "https://github.com/monomonedula/monquery"
keywords = [
    "mongodb",
    "utility",
    "http",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pytest-coverage = "^0.0"
mypy = "^0.950"
pymongo = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
